apps/base/homer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
